--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
