--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.10.4",
     "html-react-parser": "^1.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
